# media-web-viewer

./: .flake8  .gitignore  API.md  API_FULL.md  ARCHITEKTUR.md  DEPENDENCIES.md  DOCUMENTATION.md  INSTALL.md  LICENSE.md  README.md  REQUIREMENTS.md  TECH_STACK.md  TEST_SUITES.md  TEST_SUITE_SUMMARY.md  VERSION  VERSION_SYNC.json  ast_failed_files.txt  build.py  build_deb.sh  build_exe.sh  build_system.py  check_environment.py  conftest.py  db.py  docker-compose.ci.yml  env_handler.py  install_launcher.sh  logbuch_parser_02_fast_scan.md  logbuch_parser_03_iso_comparison.md  logbuch_parser_04_image_differentiation.md  logger.py  main.py  main2.py  media_format.py  models.py  parse_tags_type.py  pyproject.toml  pytest.ini  reinstall_deb.sh  requirements-core.txt  (+18 more)
.github/: copilot-instructions.md
bugs/: gevent
docs/: 90_Build_Pipeline_Strategy_FullRelease_vs_MainPush.md  API_FULL.md  Basic_Tests_Overview.md  Build_Config_Strategie.md  Core_Venv_Monitoring.md  DEPENDENCIES.md  DOCUMENTATION.md  Git_Troubleshooting_Local_vs_Remote.md  IMPORT_SHADOWING_AND_TEST_VENV.md  INSTALL.md  Management_Suite_Walkthrough.md  OPTION_A_make_tests_resilient.md  OPTION_B_pin_deps_and_add_testdata.md  Project_Garbage_Collector_Walkthrough.md  Project_Markdown_File_List.md  REFERENCE_SCREENSHOTS.md  REPORTING_MENU.md  STYLE_GUIDE.md  STYLE_GUIDE_TEST_DOCSTRINGS.md  STYLE_GUIDE_TEST_HEADERS.md  STYLE_GUIDE_TEST_HEADERS_VARIANTS.md  STYLE_GUIDE_WEB.md  SYSTEM_SYNTHESIS.md  SYSTEM_VENVS_EXPLAINED.md  StyleGuide_TestHeader_Examples.md  TECH_STACK.md  TEST_SUITE_SUMMARY.md  TIERS.md  (+18 more)
(+3392 files in other folders)
