[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "media-web-viewer"
version = "1.35.68"
description = "A powerful agentic media viewer and web-based indexing suite."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kazaa3", email = "kazaa3@example.com"}
]
dependencies = [
    "eel",
    "bottle",
    "bottle-websocket",
    "mutagen",
    "pymediainfo",
    "gevent",
    "gevent-websocket",
    "psutil",
    "future",
    "chardet",
    "python-dotenv"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
dev = [
    "doxypy"
]

[tool.setuptools]
packages = ["src"]
